Created 'Course List Schema' For 'Course List Container'

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Quick Lister</string>
     <string name="static_choose_course_textView">Select Your Course</string>
+    <string name="avatar_description">Avatar Image</string>
 </resources>
