--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Quick Lister</string>
     <string name="static_choose_course_textView">Select Course</string>
     <string name="avatar_description">Avatar Image</string>
+    <string name="copyright">Created By Attaullah Khan</string>
 </resources>
